# pants-baseline

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude-plugin/: README.md  marketplace.json  plugin.json
.claude-plugin/skills/: baseline-lint.md  baseline-typecheck.md
plugins/pants-baseline/.claude-plugin/: plugin.json
plugins/pants-baseline/.claude-plugin/skills/: baseline-audit.md  baseline-check.md  baseline-fmt.md  baseline-test.md
src/pants_baseline/: __about__.py  __init__.py  bundled_claude_plugins.py  register.py  targets.py
src/pants_baseline/goals/: __init__.py  audit.py  fmt.py  lint.py  test.py  typecheck.py
src/pants_baseline/rules/: __init__.py  audit_rules.py  fmt_rules.py  lint_rules.py  test_rules.py  typecheck_rules.py
src/pants_baseline/subsystems/: __init__.py  baseline.py  ruff.py  ty.py  uv.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_goals.py
tests/unit/: __init__.py  test_subsystems.py  test_targets.py
