[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaymd96-pants-baseline"
dynamic = ["version"]
description = "Opinionated Python code quality baseline plugin for Pants build system"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11,<4"
authors = [
    {name = "James"},
]
keywords = [
    "pants",
    "plugin",
    "baseline",
    "python",
    "linting",
    "ruff",
    "ty",
    "pytest",
    "quality",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/jaymd96/pants-baseline"
Repository = "https://github.com/jaymd96/pants-baseline.git"
Documentation = "https://github.com/jaymd96/pants-baseline#readme"

# ============================================================================
# HATCH BUILD CONFIGURATION
# ============================================================================

[tool.hatch.version]
path = "src/pants_baseline/__about__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["src/pants_baseline"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

# ============================================================================
# HATCH ENVIRONMENTS
# ============================================================================

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=src/pants_baseline --cov-report=term-missing {args:tests}"
lint = "ruff check src tests {args}"
fmt = "ruff format src tests {args}"

# ============================================================================
# RUFF CONFIGURATION
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [".venv", "dist", "build", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pants_baseline"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================================
# PYTEST CONFIGURATION
# ============================================================================

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--strict-markers", "-ra"]

# ============================================================================
# COVERAGE CONFIGURATION
# ============================================================================

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 80
